--- a/vanilla-play/index.html
+++ b/vanilla-play/index.html
@@ -6,34 +6,88 @@
     <title>Vanilla</title>
     <style>
         html,body{
-            background-color: black;
-            color: white;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            background-color: blanchedalmond;
+            font-family: Arial, Helvetica, sans-serif;
+            box-sizing: border-box;
+            width: 100%;
+            height: 100%;
+            margin: 0px;
+            padding: 0px;
         }
-        #prompt{
+        #container{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        #app{
+            top: -40px;
+            position: relative;
+            display: block;
+            width: 600px;
+            height: 400px;
+            font-size: 14px;
+            background-color: black;
+            border-radius: 3px;
+        }
+        h1{
+            margin-top: 0px;
+            border-radius: 3px 3px 0px 0px;
+            background-color: rgb(39, 27, 35);
+            color: white;
+            padding: 10px;
+            font-size: 13px;
+            margin-bottom: 0px;
+        }
+        #prompt, #history{
             color: orange;
         }
         #cursor, #cursor:focus{
+            font-size: 14px;
+            font-family: 'Courier New', Courier, monospace;
             background: black;
             border: none;
             color: white;
             outline: 0px;
         }
+
+        #content{
+            margin: 0 auto;
+            padding: 14px;
+            color: white;
+            font-family: 'Courier New', Courier, monospace;
+        }
     </style>
 </head>
 <body>
     <script>
+        // Terminal abstraction
         class Terminal{
+
+            // Consturctor takes usrname and DOMContentLoaded event
            constructor(name, event){
                this.name = name
                this.prompt = document.getElementById('prompt')
+               this.cursor = document.getElementById('cursor')
+               this.history = document.getElementById('history')
                this.location = event.srcElement.URL
-               console.log(this.prompt)
+               this.cursor.addEventListener('keyup', (e) => {
+                    if(e.keyCode === 13){
+                        this.history.innerHTML += this.buildPrompt(this.location, this.name) + ` ${e.target.value}<br/>`
+                        e.target.value = ''
+                    }
+                })
            }
 
+
+           buildPrompt = (location, name) => {
+                return `> ${location}:<span style="color:green">${name}</span><span style="color:white">$<span>`
+           }
+
+           // History CMD prompt and cursor 
            start = () => {
-                console.log(this.location)
-                this.prompt.innerHTML = `> ${this.location}:<span style="color:green">${this.name}</span><span style="color:white">$<span>`
+                this.prompt.innerHTML = this.buildPrompt(this.location, this.name);
            }
 
        }
@@ -44,12 +98,24 @@
             myTerminal.start()
        }
 
+       function focus(e){
+           console.log(e)
+           document.getElementById('cursor').focus()
+       }
+
        document.addEventListener("DOMContentLoaded", boot)
+       document.addEventListener("click", focus)
 
     </script>
-     <div id="app">
-         <span id="prompt"></span>
-         <input id="cursor"></id>
+     <div id="container">
+        <div id="app">
+            <h1>Terminal</h1>
+            <div id="content">
+                <div id="history"></div>
+                <span id="prompt"></span>
+                <input id="cursor" autofocus></id>
+            </div>
+         </div>
      </div>
 </body>
 </html>
